--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+/* font */ 
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  margin: 0;
+	padding: 0;
+	font-family: 'Manrope', sans-serif;
+	font-feature-settings: 'ss01' 1, 'ss03' 1;
+}
+
+p {
+  font-size: 1rem;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 700; 
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +25,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(99, 146, 183, 0.8); /* overlay color */
 }
 
 code {
